# HW-Warehouse-management

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: warehouse-ci.yml
src/: __init__.py  main.py
src/domain/: repositories.py  services.py  unit_of_work.py
src/infrastructure/: database.py  orm.py  repositories.py
tests/test_domain/: test_services.py
tests/test_infrastructure/: test_orm.py
