[tool.poetry]
name = "hw-warehose-management"
version = "0.1.0"
description = "This is a training project. Run it at your own risk."
authors = ["Andrey Denisov <andrey.denisov@indeed-id.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^4.0.1"
ruff = "^0.8.2"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.13.0"
flakehell = "^0.9.0"
sqlalchemy = "^2.0.36"
loguru = "^0.7.3"
pytest = "^8.3.4"
psycopg2-binary = "^2.9.10"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
